# OpenGLRenderer

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: utils.cmake
include/renderer/: renderer.hpp  version.hpp
include/renderer/core/: camera.hpp  obj_loader.hpp  shader_loader.hpp  tex_loader.hpp  vertex.hpp
include/renderer/gl/: buffer.hpp  framebuffer.hpp  renderbuffer.hpp  shader.hpp  shader_pipeline.hpp  shader_program.hpp  texture.hpp  types.hpp  vertex_array.hpp
include/renderer/utility/: hash.hpp
renderer/: main.cpp  renderer.cpp
renderer/core/: camera.cpp  obj_loader.cpp  shader_loader.cpp  tex_loader.cpp  vertex.cpp
renderer/gl/: buffer.cpp  framebuffer.cpp  renderbuffer.cpp  shader.cpp  shader_pipeline.cpp  shader_program.cpp  texture.cpp  vertex_array.cpp
resources/shaders/: pbr.frag  pbr.vert  simple.frag  simple.vert
shader_preprocessor/include/shader_preprocessor/: shader_file.hpp
src/backend/: test.cpp
